# PEF-2023

./: CMakeLists.txt  FINAL.md  GraficarFunciones  GraficarFunciones.cpp  README.md  resultados.txt
docs/: PlanDeProyecto2.docx
headers/: FuncionesMath.h
src/: Execute  GraficarFunciones.cpp
test/: tests.cpp
