# Minimum required CMake version
cmake_minimum_required(VERSION 3.12)

# Project name
project(PEF-2023)

# Add your source files here
# For example:
# add_executable(myapp main.cpp)

# Add any additional libraries or dependencies here
# For example:
# target_link_libraries(myapp mylib)

# Set any compiler flags or options here
# For example:
# target_compile_options(myapp PRIVATE -Wall -Wextra)

# Set any additional CMake configurations here
# For example:
# set(CMAKE_CXX_STANDARD 17)
